<resources>
    <string name="app_name">Like</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Like it?</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_film">My movies</string>
    <string name="title_activity_series">My Series</string>
    <string name="title_activity_stats">My stats</string>
    <string-array name="sort_array">
        <item>Movie</item>
        <item>Serie</item>
    </string-array>
    <string name="stats_piechart">Amount of movies VS. films reviewed</string>
    <string name="stats_generalstats">Average ratings given</string>
    <string name="stats_barchart">Top 5 highest rated movies</string>
    <string name="average">The average rating given is: </string>
    <string name="averageMovie">The average score given for movies is: </string>
    <string name="averageSerie">The average score given for series is: </string>
</resources>


