<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="Home" />
        <item
            android:id="@+id/nav_series"
            android:icon="@drawable/ic_live_tv_black_24dp"
            android:title="@string/title_activity_series" />
        <item
            android:id="@+id/nav_film"
            android:icon="@drawable/ic_movie_black_24dp"
            android:title="@string/title_activity_film"
            android:visible="true" />
        <item
            android:id="@+id/nav_stats"
            android:layout_width="match_parent"
            android:icon="@drawable/ic_show_chart_black_24dp"
            android:title="@string/title_activity_stats" />
    </group>

</menu>
