<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".StatsActivity"
    tools:showIn="@layout/app_bar_stats">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/stats_piechart"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"/>
            <lecho.lib.hellocharts.view.PieChartView
                android:id="@+id/piechart"
                android:layout_width="match_parent"
                android:layout_height="200dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/stats_generalstats"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/textAvgScore"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:id="@+id/textAvgScoreMovie"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:id="@+id/textAvgScoreSerie"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/stats_barchart"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginTop="40dp"/>
            <lecho.lib.hellocharts.view.ColumnChartView
                android:id="@+id/columnchart"
                android:layout_marginTop="40dp"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="20dp"/>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>